# backend/internal/api/dto/create_payment.go
@@ -1,0 +1,17 @@
+package dto
+
+type CreatePaymentRequest struct {
+	InvoiceID uint `json:"invoice_id" binding:"required"`
+
+	PaymentDate string `json:"payment_date"`
+
+	Amount float64 `json:"amount" binding:"required"`
+
+	Method string `json:"method"`
+
+	TransactionID string `json:"transaction_id"`
+
+	Reference string `json:"reference"`
+
+	Remarks string `json:"remarks"`
+}
